feat: add global exception handling for domain and validation errors